# GalDownloader

./: .gitignore  _refresh_cookies.bat  _run.bat  _run_hidden.vbs  _shutdown.ps1  clear.bat  pyproject.toml  readme.md  requirements.txt
config/: .gitignore  app.ini  user.ini.default
log/: daily
src/: api.py  app.py  check_in.py  chrome.py  conf.py  db.py  downloader.py  driver.py  driver.py.chrome  driver.py.edge  favorite.py  logger.py  login.py  sct.py  update.py
