[project]
name = "new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aria2p>=0.12.1",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "selenium>=4.34.2",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
